--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/buttermilkpancakes.html">Buttermilk Pancakes</a></li>
-            <li><a href="recipes/bananabread.html">Banana Bread</a></li>
-            <li><a href="recipes/peanutbutterchocolatechipoatbars.html">
-            Peanut Butter Chocolate Chip Oat Bars</a></li>
-        </ul>
+        <div class="recipe_list">
+            <div><a href="recipes/buttermilkpancakes.html">Buttermilk Pancakes</a></div>
+            <div><a href="recipes/bananabread.html">Banana Bread</a></div>
+            <div><a href="recipes/peanutbutterchocolatechipoatbars.html">Peanut Butter Chocolate Chip Oat Bars</a></div>
+        </div>
        
     </body>
 </html>
