Edit recipes/bananabread.html and recipes/peanutbutterchocolatechipoatbars.html and style.css

--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
     <body>
+        <div class="recipe_page">
         <h1>Banana Bread Recipe</h1>
         <div class="intro">
             <p>About to throw out your overripe bananas? Stop! Make this super easy soft moist Banana Bread! </p>
@@ -44,5 +45,6 @@
                 <li>Bake for 50 to 60 minutes or until a wooden pick inserted into the center comes out clean. Let cool in the pan for 20 minutes then remove and finish cooling on a wire rack.</li>
             </ol>
         </div>
+    </div>
     </body>
 </html>
