--- a/recipes/peanutbutterchocolatechipoatbars.html
+++ b/recipes/peanutbutterchocolatechipoatbars.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <div class="recipe_page">
     <h1>Peanut Butter Chocolate Chip Oat Bars Recipe</h1>
     
     <div class="intro">
@@ -42,7 +43,7 @@
             <li>Place in refridgerator and chill for at least two hours before serving.</li>
         </ol>
     </div>
-    
+</div>
 
 </body>
 </html>
